--- a/index.html
+++ b/index.html
@@ -9,9 +9,22 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
     <title>Hello, world!</title>
+    
   </head>
   <body>
-    <h1 class="text-center mt-5 display-4">Hola mi chichona</h1>
+    <h1 class="text-center mt-5 display-4">Hola mi chinchona</h1>
+
+    <div id="carouselexample" class="carousel slide" data-ride="carousel">
+      <div class="carousel-inner">
+        <div class ="carousel-item active">
+          <img src="./img1.png" alt="..." class="d-block w-100">
+
+        </div>
+
+
+      </div>
+
+    </div>
 
     <!-- Optional JavaScript; choose one of the two! -->
 
