--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       </div>
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img src="img1.png" class="d-block w-20 " alt="...">
+          <img src="img1.png" class="d-block w-100 " alt="..." width="620" height="450">
             
           <div class="carousel-caption d-none d-md-block">
             <h5>First slide label</h5>
