--- a/index.html
+++ b/index.html
@@ -30,14 +30,14 @@
           </div>
         </div>
         <div class="carousel-item">
-          <img src="img2.png" class="d-block w-10" alt="...">
+          <img src="img2.png" class="d-block w-100" alt="..."width="620" height="450">
           <div class="carousel-caption d-none d-md-block">
             <h5>Second slide label</h5>
             <p>Some representative placeholder content for the second slide.</p>
           </div>
         </div>
         <div class="carousel-item">
-          <img src="img3.png" class="d-block w-30" alt="...">
+          <img src="img3.png" class="d-block w-100" alt="..."width="620" height="450">
           <div class="carousel-caption d-none d-md-block">
             <h5>Third slide label</h5>
             <p>Some representative placeholder content for the third slide.</p>
