--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <header class="header" id="inicio">
       <img src="img/hamburguesa.svg" alt="" class=" hamburger">
       <nav class="menu-navegacion">
-        <a href="#">Te</a>
+        <a href="#">Inicio</a>
         <a href="#">Quiero</a>
         <a href="#">Mucho</a>
         <a href="#">Estefany</a>
@@ -58,12 +58,12 @@
         <div class="contenedor">
           <h2 class="subtitulo">Galeria</h2>
           <div class="contenedor-galeria">
-            <img src="img/img1.png" alt="im-galeria">
-            <img src="img/img4.png" alt="im-galeria">
-            <img src="img/img5.png" alt="im-galeria">
-            <img src="img/img6.png" alt="im-galeria">
-            <img src="img/img7.png" alt="im-galeria">
-            <img src="img/img8.png" alt="im-galeria">
+            <img src="img/img1.png" alt="" width="100%">
+            <img src="img/img4.png" alt="" width="100%">
+            <img src="img/img5.png" alt="" width="100%">
+            <img src="img/img6.png" alt="" width="100%">
+            <img src="img/img7.png" alt="" width="100%">
+            <img src="img/img8.png" alt="" width="100%">
           </div>
         </div>
       </section>
