--- a/index.html
+++ b/index.html
@@ -22,23 +22,47 @@
     <div class="container">
         <div class="row">
             <div class="col s12"></div>
-            <h1 class="center-align titulo">Nuestra Galeria de fotos</h1>
+                <h1 class="center-align titulo">Nuestra Galeria de fotos</h1>
 
-            <div class="carousel center-align">
-                <div class="carousel-item">
-                    <h2 class="subtitulos">Te</h2>
-                    <div class="linea-division"></div>
-                    <p class="sabor">23.05.21</p>
-                    <img src="img/img1.png" alt="">
-                </div>
+                <div class="carousel center-align">
+                    <div class="carousel-item">
+                        <h2 class="subtitulos">Te</h2>
+                        <div class="linea-division"></div>
+                        <p class="sabor">23.05.21</p>
+                        <img src="img/img1.png" alt="">
+                    </div>
 
-                <div class="carousel-item">
-                    <h2 class="subtitulos">Te</h2>
-                    <div class="linea-division"></div>
-                    <p class="sabor">23.05.21</p>
-                    <img src="img/img2.png" alt="">
-                </div>
-        </div>
+                    <div class="carousel-item">
+                        <h2 class="subtitulos">Te</h2>
+                        <div class="linea-division"></div>
+                        <p class="sabor">23.05.21</p>
+                        <img src="img/img2.png" alt="">
+                    </div>
+                    <div class="carousel-item">
+                        <h2 class="subtitulos">Te</h2>
+                        <div class="linea-division"></div>
+                        <p class="sabor">23.05.21</p>
+                        <img src="img/img3.jpg" alt="">
+                    </div>
+                    <div class="carousel-item">
+                        <h2 class="subtitulos">Te</h2>
+                        <div class="linea-division"></div>
+                        <p class="sabor">23.05.21</p>
+                        <img src="img/img4.png" alt="">
+                    </div>
+                    <div class="carousel-item">
+                        <h2 class="subtitulos">Te</h2>
+                        <div class="linea-division"></div>
+                        <p class="sabor">23.05.21</p>
+                        <img src="img/img5.png" alt="">
+                    </div>
+                    <div class="carousel-item">
+                        <h2 class="subtitulos">Te</h2>
+                        <div class="linea-division"></div>
+                        <p class="sabor">23.05.21</p>
+                        <img src="img/img6.png" alt="">
+                    </div>
+            </div>
         </div>
     </div>
 
