--- a/index.html
+++ b/index.html
@@ -33,31 +33,31 @@
                     </div>
 
                     <div class="carousel-item">
-                        <h2 class="subtitulos">Te</h2>
+                        <h2 class="subtitulos">Amo</h2>
                         <div class="linea-division"></div>
                         <p class="sabor">23.05.21</p>
                         <img src="img/img2.png" alt="">
                     </div>
                     <div class="carousel-item">
-                        <h2 class="subtitulos">Te</h2>
+                        <h2 class="subtitulos">Mucho</h2>
                         <div class="linea-division"></div>
                         <p class="sabor">23.05.21</p>
                         <img src="img/img3.jpg" alt="">
                     </div>
                     <div class="carousel-item">
-                        <h2 class="subtitulos">Te</h2>
+                        <h2 class="subtitulos">Estefany</h2>
                         <div class="linea-division"></div>
                         <p class="sabor">23.05.21</p>
                         <img src="img/img4.png" alt="">
                     </div>
                     <div class="carousel-item">
-                        <h2 class="subtitulos">Te</h2>
+                        <h2 class="subtitulos">Vila</h2>
                         <div class="linea-division"></div>
                         <p class="sabor">23.05.21</p>
                         <img src="img/img5.png" alt="">
                     </div>
                     <div class="carousel-item">
-                        <h2 class="subtitulos">Te</h2>
+                        <h2 class="subtitulos">♥</h2>
                         <div class="linea-division"></div>
                         <p class="sabor">23.05.21</p>
                         <img src="img/img6.png" alt="">
