--- a/index.html
+++ b/index.html
@@ -51,13 +51,13 @@
                         <img src="img/img4.png" alt="">
                     </div>
                     <div class="carousel-item">
-                        <h2 class="subtitulos"></h2>
+                        <h2 class="subtitulos">Vila</h2>
                         <div class="linea-division"></div>
                         <p class="sabor">23.05.21</p>
                         <img src="img/img5.png" alt="">
                     </div>
                     <div class="carousel-item">
-                        <h2 class="subtitulos">Te</h2>
+                        <h2 class="subtitulos">♥</h2>
                         <div class="linea-division"></div>
                         <p class="sabor">23.05.21</p>
                         <img src="img/img6.png" alt="">
